--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.9.3",
     "unocss": "^66.5.11",
     "vite": "^7.3.0",
-    "vue-tsc": "^3.2.1"
+    "vue-tsc": "^3.2.1",
+    "wrangler": "^4.54.0"
   }
 }
