--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,5 +4,7 @@
   "assets": {
     "directory": "./dist",
     "not_found_handling": "single-page-application"
-  }
+  },
+  "preview_urls": true,
+  "workers_dev": true
 }
