--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
 # Spotify OAuth Configuration
-# Get these from https://developer.spotify.com/dashboard
-# Note: Spotify doesn't allow 'localhost', use 127.0.0.1 instead
+# Get your client ID from https://developer.spotify.com/dashboard
 
 VITE_SPOTIFY_CLIENT_ID=your_client_id_here
-VITE_SPOTIFY_REDIRECT_URI=http://127.0.0.1:5173/callback
