project name adjustment

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "rhyzm-for-spotify",
+  "name": "favscene-for-spotify",
   "compatibility_date": "2025-01-01",
   "assets": {
     "directory": "./dist",
