--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "packageManager": "pnpm@10.26.2",
   "dependencies": {
+    "@spotify/web-api-ts-sdk": "^1.2.0",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
