Add centralized logger with configurable log levels
- Create src/utils/logger.ts with debug/info/warn/error levels
- Default: debug in dev, error in prod
- Override via VITE_LOG_LEVEL env var
- Update config.ts to use logger.error()
- Document in .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@
 # Get your client ID from https://developer.spotify.com/dashboard
 
 VITE_SPOTIFY_CLIENT_ID=your_client_id_here
+
+# Logging Configuration (optional)
+# Levels: debug, info, warn, error, silent
+# Default: debug in dev, error in prod
+# VITE_LOG_LEVEL=debug
