Add KV data encryption using AES-256-GCM
- Encrypt scene data with user's Spotify ID as key (user ID → SHA-256 → AES key)
- Hash user ID for KV key to anonymize storage (scenes:hash instead of scenes:username)
- Add migration support for legacy plaintext data
- Use @noble/ciphers library (audited, zero dependencies)

Privacy benefit: Even the app owner cannot bulk-decrypt user data without knowing each user's ID.

Also includes deployment fixes from testing:
- Fix API base URL config for production (same-origin)
- Add logout functionality
- Configure Workers Static Assets binding

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,8 @@ VITE_SPOTIFY_CLIENT_ID=your_client_id_here
 
 # Scene Sync API Configuration (optional)
 # Base URL for Cloudflare Worker backend
-# Development: http://localhost:8787
-# Production: https://favscene-for-spotify.YOUR_SUBDOMAIN.workers.dev
-# If not set, defaults to placeholder URL
+# Production: leave unset (uses same origin)
+# Local dev: http://localhost:8787 (run: pnpm wrangler dev)
 # VITE_API_BASE_URL=http://localhost:8787
 
 # Logging Configuration (optional)
