--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "packageManager": "pnpm@10.26.2",
   "dependencies": {
+    "@noble/ciphers": "^2.1.1",
+    "@noble/hashes": "^2.0.1",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20251229.0",
     "@vitejs/plugin-vue": "^6.0.3",
     "typescript": "^5.9.3",
     "unocss": "^66.5.11",
