Add unified local development setup
- Add dev:full script using concurrently (runs Vite + Wrangler together)
- Add .env.development for auto-configured local API URL
- Update CLAUDE.md with complete local dev setup guide
- Add .wrangler/ to gitignore

Run `pnpm dev:full` to start both servers with color-coded logs.

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-# Spotify OAuth Configuration
+# Copy this file to .env and fill in your values
+# cp .env.example .env
+
+# Spotify OAuth Configuration (required)
 # Get your client ID from https://developer.spotify.com/dashboard
-
 VITE_SPOTIFY_CLIENT_ID=your_client_id_here
-
-# Scene Sync API Configuration (optional)
-# Base URL for Cloudflare Worker backend
-# Production: leave unset (uses same origin)
-# Local dev: http://localhost:8787 (run: pnpm wrangler dev)
-# VITE_API_BASE_URL=http://localhost:8787
 
 # Logging Configuration (optional)
 # Levels: debug, info, warn, error, silent
 # Default: debug in dev, error in prod
 # VITE_LOG_LEVEL=debug
+
+# Note: VITE_API_BASE_URL is auto-configured:
+# - Dev mode: .env.development sets it to http://localhost:8787
+# - Production: defaults to same origin (empty string)
