--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:full": "concurrently -n vite,worker -c blue,green \"pnpm dev\" \"pnpm worker:dev\"",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "worker:dev": "wrangler dev",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251229.0",
     "@vitejs/plugin-vue": "^6.0.3",
+    "concurrently": "^9.2.1",
     "typescript": "^5.9.3",
     "unocss": "^66.5.11",
     "vite": "^7.3.0",
