--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "dev:full": "concurrently -n vite,worker -c blue,green \"pnpm dev\" \"pnpm worker:dev\"",
-    "build": "vue-tsc -b && vite build",
+    "lint": "eslint src worker",
+    "format:check": "prettier --check 'src/**/*.{ts,vue}' 'worker/**/*.ts'",
+    "format": "prettier --write 'src/**/*.{ts,vue}' 'worker/**/*.ts'",
+    "build": "pnpm format && pnpm lint && pnpm format:check && vue-tsc -b && vite build",
     "preview": "vite preview",
     "worker:dev": "wrangler dev",
     "worker:deploy": "pnpm build && wrangler deploy",
@@ -21,11 +24,18 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20251229.0",
+    "@cloudflare/workers-types": "^4.20251230.0",
+    "@eslint/js": "^9.39.2",
     "@vitejs/plugin-vue": "^6.0.3",
     "concurrently": "^9.2.1",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-vue": "^10.6.2",
+    "globals": "^16.5.0",
+    "prettier": "^3.7.4",
     "typescript": "^5.9.3",
-    "unocss": "^66.5.11",
+    "typescript-eslint": "^8.51.0",
+    "unocss": "^66.5.12",
     "vite": "^7.3.0",
     "vue-tsc": "^3.2.1",
     "wrangler": "^4.54.0"
